fixing bugs related to source folders. Updating plugin dependencies